avoid full layover on mobile

--- a/projects/storefrontstyles/scss/components/product/search/_searchbox.scss
+++ b/projects/storefrontstyles/scss/components/product/search/_searchbox.scss
@@ -131,7 +131,6 @@
     @include media-breakpoint-down(md) {
       top: 104px;
       z-index: 10;
-      height: 100%;
     }
 
     a {
